Compilation_Racket_Mips/piton/tests/errors/arity_too_few.py
def a(b: int, c: int, d: int) -> int:
    return b + c + d
a(1, 2)